--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+e<!DOCTYPE HTML>
 <!--
 	Lens by HTML5 UP
 	html5up.net | @ajlkn
@@ -32,7 +32,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/13.jpg" alt="" /></a>
 							<h2>Diam tempus accumsan</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						</article>
