--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ e<!DOCTYPE HTML>
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Lens</h1>
-						<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+						<h1>Niklas Pirker</h1>
+						<p>Mein Portfolio - Vorlage von HTML5up <a href="http://html5up.net">HTML5 UP</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
