--- a/index.html
+++ b/index.html
@@ -32,42 +32,42 @@ e<!DOCTYPE HTML>
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/13.jpg" data-position="left center"><img src="images/thumbs/13.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/13.jpeg" data-position="left center"><img src="images/thumbs/13.jpeg" alt="" /></a>
 							<h2>Diam tempus accumsan</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/14.jpg"><img src="images/thumbs/14.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/14.jpeg"><img src="images/thumbs/14.jpeg" alt="" /></a>
 							<h2>Vivamus convallis libero</h2>
 							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/15.jpg" data-position="top center"><img src="images/thumbs/15.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/15.jpeg" data-position="top center"><img src="images/thumbs/15.jpeg" alt="" /></a>
 							<h2>Nec accumsan enim felis</h2>
 							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/16.jpg"><img src="images/thumbs/16.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/16.jpeg"><img src="images/thumbs/16.jpeg" alt="" /></a>
 							<h2>Donec maximus nisi eget</h2>
 							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/17.jpg" data-position="top center"><img src="images/thumbs/17.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/17.jpeg" data-position="top center"><img src="images/thumbs/17.jpeg" alt="" /></a>
 							<h2>Nullam vitae nunc vulputate</h2>
 							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/18.jpg"><img src="images/thumbs/18.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/18.jpeg"><img src="images/thumbs/18.jpeg" alt="" /></a>
 							<h2>Phasellus magna faucibus</h2>
 							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/19.jpg"><img src="images/thumbs/19.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/19.jpeg"><img src="images/thumbs/19.jpeg" alt="" /></a>
 							<h2>Proin quis mauris</h2>
 							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/20.jpg"><img src="images/thumbs/20.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/20.jpeg"><img src="images/thumbs/20.jpeg" alt="" /></a>
 							<h2>Gravida quis varius enim</h2>
 							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
 						</article>
