--- a/index.html
+++ b/index.html
@@ -33,43 +33,43 @@ e<!DOCTYPE HTML>
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/13.jpeg" data-position="left center"><img src="images/thumbs/13.jpeg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<h2>Japan</h2>
+							<p>Tempel</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/14.jpeg"><img src="images/thumbs/14.jpeg" alt="" /></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
+							<h2>Japan</h2>
+							<p>Stadt</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/15.jpeg" data-position="top center"><img src="images/thumbs/15.jpeg" alt="" /></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+							<h2>Japan</h2>
+							<p>Stadt</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/16.jpeg"><img src="images/thumbs/16.jpeg" alt="" /></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
+							<h2>Japan</h2>
+							<p>Tempel</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/17.jpeg" data-position="top center"><img src="images/thumbs/17.jpeg" alt="" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+							<h2>Japan</h2>
+							<p>Boot</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/18.jpeg"><img src="images/thumbs/18.jpeg" alt="" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+							<h2>Japan</h2>
+							<p>Haus</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/19.jpeg"><img src="images/thumbs/19.jpeg" alt="" /></a>
-							<h2>Proin quis mauris</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
+							<h2>Japan</h2>
+							<p>Dorf</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/20.jpeg"><img src="images/thumbs/20.jpeg" alt="" /></a>
-							<h2>Gravida quis varius enim</h2>
-							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
+							<h2>Japan</h2>
+							<p>Tempel</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
