--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ e<!DOCTYPE HTML>
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/Snapchat-37558381.jpg" data-position="left center"><img src="images/thumbs/13.jpeg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/Snapchat-37558381.jpg" data-position="left center"><img src="images/thumbs/Snapchat-37558381.jpg" alt="" /></a>
 							<h2>Japan</h2>
 							<p>Tempel</p>
 						</article>
